theme/demos/wireframe/site/variables.css
@layer base {
  :root,
  :root *::before,
  :root *::after {
    --color-background: 255, 255, 255;
    --color-foreground: 41, 41, 41;
    --color-link: 32, 32, 224;
    --color-focus: 67, 110, 255;
    --color-accent: 41, 84, 255;
    --color-accent-lighter: 67, 110, 255;
    --color-accent-darker: 16, 59, 230;
    --color-shade-1: 236, 239, 241;
    --color-shade-2: 207, 216, 220;
    --color-shade-3: 96, 125, 139;
    --color-shade-4: 69, 90, 100;
    --color-error: 215, 55, 63;
    --color-error-darker: 190, 30, 38;
    --color-success: 38, 142, 108;
    --color-success-darker: 13, 117, 83;
    --color-shadow: "rgba(0, 0, 0, 0.16)";
  }

  .dark,
  .dark *::before,
  .dark *::after {
    --color-background: 51, 66, 73;
    --color-foreground: 250, 250, 250;
    --color-link: 178, 210, 255;
    --color-focus: 178, 210, 255;
    --color-shade-1: 86, 113, 127;
    --color-shade-2: 77, 101, 113;
    --color-shade-3: 63, 81, 90;
    --color-shade-4: 51, 66, 73;
  }
}

